chore: otel container config